dataiku-dss-9.0.5/resources/container-exec/kubernetes/deployment.yaml
apiVersion: __API_VERSION__
kind: Deployment
metadata:
  name: dataiku-exec-__DKU_EXECUTION_ID__
  # __DKU_LABELS_AND_ANNOTATIONS__
  # To add labels to pods and jobs, set a dku.kubernetes.jobs.extraLabels key
  # To add annotations to pods and jobs, set a dku.kubernetes.jobs.extraAnnotations key
spec:
  selector:
    matchLabels:
      dataiku.com/dku-execution-id: __DKU_EXECUTION_ID__
  replicas: __NB_REPLICAS__
  template:
    metadata:
      # __DKU_LABELS_AND_ANNOTATIONS__
      # To add labels to pods and jobs, set a dku.kubernetes.jobs.extraLabels key
      # To add annotations to pods and jobs, set a dku.kubernetes.jobs.extraAnnotations key
    spec:
      containers:
      - name: c
        image: __DKU_IMAGE_ID__
        imagePullPolicy: IfNotPresent # local image
        ports:
        - containerPort: 10000
        args: ["$(DKU_EXECUTION_ID)"]
        readinessProbe:
          httpGet:
            path: __DKU_READINESS_PATH__
            port: 10000
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 2
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/liveliness.marker
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 5
      # __DKU_KUBERNETES_HOSTPATH_HOST_VOLUMES__
      # __DKU_KUBERNETES_NODESELECTOR__
      # __DKU_KUBERNETES_AFFINITY__
      # __DKU_KUBERNETES_TOLERATIONS__
