dataiku-dss-9.0.5/resources/container-exec/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __NAME_PREFIX__-service-__DKU_EXECUTION_ID__
__LABELS__
__ANNOTATIONS__
spec:
__SELECTORS__
__SPEC_SNIPPET__
