dataiku-dss-9.0.5/resources/container-exec/kubernetes/ingress_1_19.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NAME_PREFIX__-ingress-__DKU_EXECUTION_ID__
__LABELS__
__ANNOTATIONS__
spec:
  defaultBackend:
    service:
      name: __NAME_PREFIX__-service-__DKU_EXECUTION_ID__
      port:
        number: __SERVICE_PORT__
  rules:
  - http:
      paths:
      - __OPTIONAL_SERVICE_PATH__backend:
          service:
            name: __NAME_PREFIX__-service-__DKU_EXECUTION_ID__
            port:
              number: __SERVICE_PORT__
        pathType: ImplementationSpecific
__TLS__
