dataiku-dss-9.0.5/resources/container-exec/kubernetes/ingress_pre1_19.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __NAME_PREFIX__-ingress-__DKU_EXECUTION_ID__
__LABELS__
__ANNOTATIONS__
spec:
  backend:
    serviceName: __NAME_PREFIX__-service-__DKU_EXECUTION_ID__
    servicePort: __SERVICE_PORT__
  rules:
  - http:
      paths:
      - __OPTIONAL_SERVICE_PATH__backend:
          serviceName: __NAME_PREFIX__-service-__DKU_EXECUTION_ID__
          servicePort: __SERVICE_PORT__
__TLS__
